force-app/main/default/objects/AMFS_E2C_Setting__mdt/AMFS_E2C_Setting__mdt.object-meta.xml
<CustomObject>
    <label>AMFS E2C Setting</label>
    <pluralLabel>AMFS E2C Settings</pluralLabel>
</CustomObject>