force-app/main/default/objects/AMFS_E2C_Setting__mdt/fields/Business_Hour_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Hour_Name__c</fullName>
    <label>Business Hour Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>