force-app/main/default/objects/AMFS_E2C_Setting__mdt/fields/Email_Case__c.field-meta.xml
<CustomField>
    <fullName>Email_Case__c</fullName>
    <label>Email Case</label>
    <length>200</length>
    <type>Text</type>
</CustomField>