force-app/main/default/objects/AMFS_E2C_Setting__mdt/fields/SLA_Time_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Time_in_Hours__c</fullName>
    <label>SLA Time in Hours</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>